updated contact number

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+919717765397</div>
+              <div class="col-sm-8">+919717765397/+919717017397</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
@@ -502,7 +502,7 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2">Tower CS5 Supertech capetown Sector 74 Noida India</p>
                     <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+919717765397</p>
+                    <p class="pb-2">+919717765397/+919717017397</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>yogiverma@gmail.com</p>
                   </div>
