changes for number

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Tower CS5 Supertech capetown Sector 74 Noida India</div>
+              <div class="col-sm-8">Supertech capetown Sector 74 Noida India</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -500,9 +500,9 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Tower CS5 Supertech capetown Sector 74 Noida India</p>
+                    <p class="pb-2">Supertech capetown Sector 74 Noida India</p>
                     <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+919717765397/+919717017397</p>
+                    <p class="pb-2">Nine seven One seven seven 65397 / 97170 One seven three nine seven</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>yogiverma@gmail.com</p>
                   </div>
