CHANGES FOR UPPER NUMBERS.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+919717765397/+919717017397</div>
+              <div class="col-sm-8">Nine seven One seven seven 65397 / 97170 One seven three nine seven</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
