--- a/index.html
+++ b/index.html
@@ -455,49 +455,15 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
         <div class="row">
           <div class="col-md-9">
             <div class="card mb-0" data-aos="zoom-in">
-              <div class="h4 text-center title">Contact Me</div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <div class="card-body">
-                    <form action="mailto:yogiverma1991@gmail.com" method="POST">
-                      <div class="p pb-3"><strong>Feel free to contact me </strong></div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-                            <input class="form-control" type="text" name="name" placeholder="Name" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
-                            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                            <input class="form-control" type="email" name="_replyto" placeholder="E-mail" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" placeholder="Your Message" required="required"></textarea>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <button class="btn btn-primary" type="submit">Send</button>
-                        </div>
-                      </div>
-                    </form>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScEl0aImjnlKVgHsPo-VAqB9xhyQ31aFmRy69vKW-cvU-xMuw/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
                   </div>
                 </div>
-                <div class="col-md-6">
+              </div>
+                <div class="col-md-12">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2">Tower CS5 Supertech capetown Sector 74 Noida India</p>
@@ -507,6 +473,7 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
                     <p>yogiverma@gmail.com</p>
                   </div>
                 </div>
+              </div>
               </div>
             </div>
           </div>
