git ignore added. social links working now.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>-->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -48,7 +48,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://facebook.com/yogiverma07" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/yogiverma07" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/yogiverma007/?hl=en" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Yogesh Verma. Software Developer, wannabe chef and adventure freak.</p>
-            <p>Beta world now.</p>
+            <!--<p>Beta world now.</p>-->
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -70,7 +70,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">28</div>
+              <div class="col-sm-8">29</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -82,7 +82,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Supertech capetown Sector 74 Noida India</div>
+              <div class="col-sm-8">R K Puram Karnal India</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -136,7 +136,8 @@
     </div>
   </div>
 </div>
-<div class="section" id="portfolio">
+<!--
+      <div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -267,7 +268,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -389,7 +390,7 @@
             <p class="category">Nishan Public School</p>
             <p>Nishan Public School was established as a tribute to Late Sardar Nishan Singh Bhinder. A visionary and a foreseer, Sardar Bhinder said it is education alone which can single-handedly bring equality among our distinctly dissimilar society.
 Hailing from a landlord family of Punjab province in Pakistan, he migrated to India during the 1947 partition.
-Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal under the Societies Registration Act XXI, 1860. Founded by Maj. R. S. Bhinder in the year 1990, Nishan Public School is an English medium, residential cum day boarding Co-educational school at Danialpur Road, Near Flying Club, P.O. Tikri, Karnal, Haryana - 132001. This school is to be affiliated to the Central Board of Secondary Education (C.B.S.E.) New Delhi up to Senior Secondary level with all the streams of study (Art/Commerce, Medical and Non-Medical) vide code no. 530139</p>
+School is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal under the Societies Registration Act XXI, 1860. Founded by Maj. R. S. Bhinder in the year 1990, Nishan Public School is an English medium, residential cum day boarding Co-educational school at Danialpur Road, Near Flying Club, P.O. Tikri, Karnal, Haryana - 132001. This school is to be affiliated to the Central Board of Secondary Education (C.B.S.E.) New Delhi up to Senior Secondary level with all the streams of study (Art/Commerce, Medical and Non-Medical) vide code no. 530139</p>
           </div>
         </div>
       </div>
@@ -466,7 +467,7 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
                 <div class="col-md-12">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Supertech capetown Sector 74 Noida India</p>
+                    <p class="pb-2">R K Puram Karnal India</p>
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">Nine seven One seven seven 65397 / 97170 One seven three nine seven</p>
                     <p class="mb-0"><strong>Email</strong></p>
@@ -484,7 +485,7 @@ Nishan is now run by Sardar Nishan Singh Bhinder Educational Society, Karnal und
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://facebook.com/yogiverma07"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://twitter.com/yogiverma07"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/yogiverma007/?hl=en"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Yogesh Verma</div>
       <div class="text-center text-muted">
         <p>&copy; All rights reserved.<br>Design - <a class="credit" href="" target="_blank">Dummy</a></p>
