--- a/index.html
+++ b/index.html
@@ -96,12 +96,15 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                                    <div class="col-sm-8">yogiverma@gmail.com</div>
+                                    <div class="col-sm-8">
+                                        <span>y</span><span>o</span><span>g</span><span>i</span><span>v</span><span>e</span><span>r</span><span>m</span><span>a</span><span>1</span><span>9</span><span>9</span><span>1</span><span>@</span><span>g</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>c</span><span>o</span><span>m</span>
+                                    </div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                    <div class="col-sm-8">Nine seven One seven seven 65397 / 97170 One seven three nine
-                                        seven
+                                    <div class="col-sm-8">
+                                        9 Seven 1 Seven 765397 <b>/</b> <br>
+                                        9 seven 1 seven 017397
                                     </div>
                                 </div>
                                 <div class="row mt-3">
@@ -561,7 +564,7 @@
                                         <p class="pb-2">Nine seven One seven seven 65397 / 97170 One seven three nine
                                             seven</p>
                                         <p class="mb-0"><strong>Email</strong></p>
-                                        <p>yogiverma@gmail.com</p>
+                                        <span>y</span><span>o</span><span>g</span><span>i</span><span>v</span><span>e</span><span>r</span><span>m</span><span>a</span><span>1</span><span>9</span><span>9</span><span>1</span><span>@</span><span>g</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>c</span><span>o</span><span>m</span>
                                     </div>
                                 </div>
                             </div>
