changed contact number.

--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
                                     <div class="col-sm-8">
-                                        9 Seven 1 Seven 765397 <b>/</b> <br>
-                                        9 seven 1 seven 017397
+                                        <span>9</span><span>7</span><span>1</span><span>7</span><span>0</span><span>1</span><span>7</span><span>3</span><span>9</span><span>7</span>/<span>9</span><span>7</span><span>1</span><span>7</span><span>7</span><span>6</span><span>5</span><span>3</span><span>9</span><span>7</span>
                                     </div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                    <div class="col-sm-8">R K Puram Karnal India</div>
+                                    <div class="col-sm-8">Karnal Haryana India</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -559,10 +558,9 @@
                                 <div class="col-md-12">
                                     <div class="card-body">
                                         <p class="mb-0"><strong>Address </strong></p>
-                                        <p class="pb-2">R K Puram Karnal India</p>
+                                        <p class="pb-2">Karnal Haryana India</p>
                                         <p class="mb-0"><strong>Phone</strong></p>
-                                        <p class="pb-2">Nine seven One seven seven 65397 / 97170 One seven three nine
-                                            seven</p>
+                                        <span>9</span><span>7</span><span>1</span><span>7</span><span>0</span><span>1</span><span>7</span><span>3</span><span>9</span><span>7</span>/<span>9</span><span>7</span><span>1</span><span>7</span><span>7</span><span>6</span><span>5</span><span>3</span><span>9</span><span>7</span>
                                         <p class="mb-0"><strong>Email</strong></p>
                                         <span>y</span><span>o</span><span>g</span><span>i</span><span>v</span><span>e</span><span>r</span><span>m</span><span>a</span><span>1</span><span>9</span><span>9</span><span>1</span><span>@</span><span>g</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>c</span><span>o</span><span>m</span>
                                     </div>
