added MAF, resume link

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
                             <div class="cc-profile-image"><a href="#"><img alt="Image"
                                                                            src="images/yogesh-verma.jpg"/></a></div>
                             <div class="h2 title">Yogesh Verma</div>
-                            <p class="category text-white">Software Developer, wannabe chef and adventure freak</p><a
+                            <p class="category text-white">Software Developer, wannabe chef and adventure freak</p>
+                            <a
                                 class="btn btn-primary smooth-scroll mr-2" data-aos="zoom-in"
-                                data-aos-anchor="data-aos-anchor" href="#contact">Hire Me</a><a class="btn btn-primary"
-                                                                                                data-aos="zoom-in"
-                                                                                                data-aos-anchor="data-aos-anchor"
-                                                                                                href="https://drive.google.com/file/d/1hnKnku5wTHo8DONLB2ecIMMl8pKpleR2/view?usp=sharing"
-                                                                                                target="_blank">Download
-                            CV</a>
+                                data-aos-anchor="data-aos-anchor" href="#contact">Hire Me</a>
+                            <a class="btn btn-primary smooth-scroll mr-2" 
+                              data-aos="zoom-in"
+                              -aos-anchor="data-aos-anchor"
+                              href="https://drive.google.com/file/d/1IY0svZeUcGCh8tNVCCl1efGyDy-py0nS/view?usp=sharing"
+                              target="_blank">Download Resume</a>
                         </div>
                     </div>
                     <div class="section">
@@ -316,10 +317,27 @@
         <div class="container cc-experience">
             <div class="h4 text-center mb-4 title">Work Experience</div>
             <div class="card">
+              <div class="row">
+                  <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-duration="500" data-aos-offset="50">
+                      <div class="card-body cc-experience-header">
+                          <p>March 2021 - Present</p>
+                          <div class="h5">Majid Al Futtaim</div>
+                      </div>
+                  </div>
+                  <div class="col-md-9" data-aos="fade-left" data-aos-duration="500" data-aos-offset="50">
+                      <div class="card-body">
+                          <div class="h5">Principal Engineer</div>
+                          <p>Payments: Working on Back end services for Payments for various MAF Carrefour business with traffic serving 150 TPS. Integrated new payment gateways for different countries and developed feature apis. Revamped some architecture.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+            <div class="card">
                 <div class="row">
                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-duration="500" data-aos-offset="50">
                         <div class="card-body cc-experience-header">
-                            <p>Aug 2018 - Present</p>
+                            <p>Aug 2018 - March 2021</p>
                             <div class="h5">Paytm Payments Bank</div>
                         </div>
                     </div>
@@ -352,7 +370,7 @@
                             <div class="h5">Senior Software Engineer</div>
                             <p>Was part of two teams including payments group, hotels. In payments group was part of
                                 team which was developing a solution to do money trasfer across countries throgh MTO's
-                                like Moneygram/WUMT. In hotels team created several projects from scratch like main back
+                                like Moneygram/Western Union. In hotels team created several projects from scratch like main back
                                 end for hotels vertical, proxy channel managers, back for tickets panel for our
                                 integrations with OTA's like yatra/OYO/Booking etc.</p>
                         </div>
