--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <div class="h4 mt-0 title">Basic Information</div>
                                 <div class="row">
                                     <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                    <div class="col-sm-8">30</div>
+                                    <div class="col-sm-8">32</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -316,6 +316,27 @@
     <div class="section" id="experience">
         <div class="container cc-experience">
             <div class="h4 text-center mb-4 title">Work Experience</div>
+            <div class="card">
+              <div class="row">
+                  <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-duration="500" data-aos-offset="50">
+                      <div class="card-body cc-experience-header">
+                          <p>March 2022 - Present</p>
+                          <div class="h5">Bharatpe</div>
+                      </div>
+                  </div>
+                  <div class="col-md-9" data-aos="fade-left" data-aos-duration="500" data-aos-offset="50">
+                      <div class="card-body">
+                          <div class="h5">Principal Engineer</div>
+                          <p>Merchant Platform(Merchant Business):
+Working on merchant Platform which provides platform for core services used across Bharatpe, merchant onboarding, merchant app experience, back office portals. Revamped Overall merchant experience on app from native rollout to server driven UI. Improved core services applications availability from 96.5% to 99.99%. Handled peak load of ~20K RPS during festive season.
+Postpe(Consumer Business):
+Working on Postpe which is buy now pay later product. Users can create profiles via their Aadhar Number and PAN number. A credit limit is assigned to users which can be used to make payments similarly like credit cards. System is currently serving traffic ranging between 150-200 transactional RPS and ~2K non transactional RPS.
+Revamped architecture for better performance and customer experience for future needs as the customer base is growing at a rate of ~5% monthly.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <div class="card">
               <div class="row">
                   <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-duration="500" data-aos-offset="50">
