--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Revamped architecture for better performance and customer experience for future 
               <div class="row">
                   <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-duration="500" data-aos-offset="50">
                       <div class="card-body cc-experience-header">
-                          <p>March 2021 - Present</p>
+                          <p>March 2021 - March 2022</p>
                           <div class="h5">Majid Al Futtaim</div>
                       </div>
                   </div>
