--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@ Revamped architecture for better performance and customer experience for future 
                   <div class="col-md-9" data-aos="fade-left" data-aos-duration="500" data-aos-offset="50">
                       <div class="card-body">
                           <div class="h5">Principal Engineer</div>
-                          <p>Payments: Working on Back end services for Payments for various MAF Carrefour business with traffic serving 150 TPS. Integrated new payment gateways for different countries and developed feature apis. Revamped some architecture.
+                          <p>Worked on Payments for various MAF Carrefour businesses(offline/online) with traffic serving 300-400 TPS. 
+Integration of new payment modes for different countries with different payment gateways. Involvement of business in different countries makes problems more interesting so It was a different challenge altogether working for payments which includes multiple countries. Designed a Router for payments traffic based on multiple metrics like different countries and performance of payment gateways in different countries. Also Revamped legacy systems for better performance and good customer checkout experience on website/mobile devices.
                           </p>
                       </div>
                   </div>
