--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
                   <div class="col-md-9" data-aos="fade-left" data-aos-duration="500" data-aos-offset="50">
                       <div class="card-body">
                           <div class="h5">Principal Engineer</div>
-                          <p><b>Merchant Platform(Merchant Business)<b>:
+                          <p><b>Merchant Platform(Merchant Business)</b>:
 Working on merchant Platform which provides platform for core services used across Bharatpe, merchant onboarding, merchant app experience, back office portals. Revamped Overall merchant experience on app from native rollout to server driven UI. Improved core services applications availability from 96.5% to 99.99%. Handled peak load of ~20K RPS during festive season.
-<br>Postpe(Consumer Business):
+<br><b>Postpe(Consumer Business)</b>:
 Working on Postpe which is buy now pay later product. Users can create profiles via their Aadhar Number and PAN number. A credit limit is assigned to users which can be used to make payments similarly like credit cards. System is currently serving traffic ranging between 150-200 transactional RPS and ~2K non transactional RPS.
 Revamped architecture for better performance and customer experience for future needs as the customer base is growing at a rate of ~5% monthly.
                           </p>
