--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                                         <span>y</span><span>o</span><span>g</span><span>i</span><span>v</span><span>e</span><span>r</span><span>m</span><span>a</span><span>1</span><span>9</span><span>9</span><span>1</span><span>@</span><span>g</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>c</span><span>o</span><span>m</span>
                                     </div>
                                 </div>
-                                <div class="row mt-3">
+                                <!--<div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
                                     <div class="col-sm-8">
                                         <span>9</span><span>7</span><span>1</span><span>7</span><span>0</span><span>1</span><span>7</span><span>3</span><span>9</span><span>7</span>/<span>9</span><span>7</span><span>1</span><span>7</span><span>7</span><span>6</span><span>5</span><span>3</span><span>9</span><span>7</span>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
                                     <div class="col-sm-8">Karnal Haryana India</div>
