removed address and contact details

--- a/index.html
+++ b/index.html
@@ -596,14 +596,14 @@ Integration of new payment modes for different countries with different payment 
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="card-body">
+                                    <!--<div class="card-body">
                                         <p class="mb-0"><strong>Address </strong></p>
                                         <p class="pb-2">Karnal Haryana India</p>
                                         <p class="mb-0"><strong>Phone</strong></p>
                                         <span>9</span><span>7</span><span>1</span><span>7</span><span>0</span><span>1</span><span>7</span><span>3</span><span>9</span><span>7</span>/<span>9</span><span>7</span><span>1</span><span>7</span><span>7</span><span>6</span><span>5</span><span>3</span><span>9</span><span>7</span>
                                         <p class="mb-0"><strong>Email</strong></p>
                                         <span>y</span><span>o</span><span>g</span><span>i</span><span>v</span><span>e</span><span>r</span><span>m</span><span>a</span><span>1</span><span>9</span><span>9</span><span>1</span><span>@</span><span>g</span><span>m</span><span>a</span><span>i</span><span>l</span><span>.</span><span>c</span><span>o</span><span>m</span>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
